--- a/kibanda.html
+++ b/kibanda.html
@@ -258,6 +258,7 @@
 { title: "Episode 7", url: "https://drive.google.com/file/d/1MVDAjXAQ1IeG-cj--rXQE9ISDUQc-jxz/view" },
 { title: "Episode 8", url: "https://drive.google.com/file/d/1qwecoky8n6QLEeOE8SbTLg793hVLw3Td/view" },
  { title: "Episode 9", url: "https://drive.google.com/file/d/1VElALBSiIwgDPrqnD8_gDoElET3GdBmk/view" },
+ { title: "Episode 10", url: "https://drive.google.com/file/d/1NeOEoU1CrRjP-PngujChoPf0SKS2V23s/view" },
 
 ]
           },
