--- a/kibanda.html
+++ b/kibanda.html
@@ -293,6 +293,7 @@
  { title: "Episode 20", url: "https://drive.google.com/file/d/14KoaGObxNEFzL3nlITOSIaQImm5KmIct/view" },
  { title: "Episode 21", url: "https://drive.google.com/file/d/1E_Y5zq6I8Dr8QR8IWk4rs6d4T9yJb9B3/view" },
 { title: "Episode 22", url: "https://drive.google.com/file/d/14bVKJ7XQz8QsQrwcBoM4RjPB2DfxMiGD/view" },
+{ title: "Episode 23", url: "https://drive.google.com/file/d/1dB9VYbPbWxstjqdra5BG4Iqvu3bamszC/view" },
 ]
           },
      {
