--- a/home.html
+++ b/home.html
@@ -161,14 +161,14 @@ body{
 <div class="header">
   <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
   <h1>Busanso Nation</h1>
-  <small>Movies & Series without stress</small>
+  <small>welcome to Busanso Movies & Series. if you hates ads, pay to Watch</small>
 </div>
 
 <div class="top-actions">
   <a href="packages.html" class="btn subscribe">Pay to Watch</a>
   <a href="login.html" class="btn login">Login</a>
   <a href="live.html" class="btn live">Live</a>
-  <a href="about.html" class="btn about">About Us</a>
+  <a href="about.html" class="btn about">Are You New?</a>
   <a href="agents.html" class="btn agents">Our Agents</a>
   <a href="library-login.html" class="btn library">Library</a>
   <a href="kibanda-login.html" class="btn kibanda">Kibanda</a>
