--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@ body {
 <div class="buttons">
   <button onclick="location.href='packages.html'">💳 Pay to Watch</button>
   <button onclick="location.href='login.html'">🔐 Login</button>
-  <button onclick="location.href='home.htm'">⬅ Back</button>
+  <button onclick="location.href='home.html'">⬅ Back</button>
 </div>
 
 <!-- Info Sections -->
