--- a/home.html
+++ b/home.html
@@ -27,7 +27,6 @@ body{
 .header img{ height:55px; }
 .header h1{ margin:8px 0; }
 
-
 /* BUTTONS */
 .top-actions{
   display:flex;
@@ -52,37 +51,13 @@ body{
 }
 
 /* INDIVIDUAL BUTTON COLORS */
-.subscribe{
-  background:linear-gradient(135deg,#e50914,#ff4d4d);
-}
-
-.login{
-  background:linear-gradient(135deg,#2563eb,#38bdf8);
-}
-
-.live{
-  background:linear-gradient(135deg,#16a34a,#4ade80);
-}
-
-.about{
-  background:#111;
-  border:1px solid #333;
-  color:#ddd;
-}
-
-.agents{
-  background:linear-gradient(135deg,#9333ea,#c084fc);
-}
-
-.library{
-  background:linear-gradient(135deg,#f59e0b,#facc15);
-  color:#000;
-}
-
-.kibanda{
-  background:linear-gradient(135deg,#14b8a6,#2dd4bf);
-  color:#002;
-}
+.subscribe{ background:linear-gradient(135deg,#e50914,#ff4d4d); }
+.login{ background:linear-gradient(135deg,#2563eb,#38bdf8); }
+.live{ background:linear-gradient(135deg,#16a34a,#4ade80); }
+.about{ background:#111; border:1px solid #333; color:#ddd; }
+.agents{ background:linear-gradient(135deg,#9333ea,#c084fc); }
+.library{ background:linear-gradient(135deg,#f59e0b,#facc15); color:#000; }
+.kibanda{ background:linear-gradient(135deg,#14b8a6,#2dd4bf); color:#002; }
 
 /* HOVER EFFECT */
 .btn:hover{
@@ -90,7 +65,6 @@ body{
   box-shadow:0 10px 24px rgba(0,0,0,.5);
   opacity:.95;
 }
-
 
 /* SECTIONS */
 .section{ padding:15px; }
@@ -153,6 +127,39 @@ body{
   font-weight:bold;
   background:rgba(0,0,0,0.6);
 }
+
+/* FLOATING INSTALL BUTTON */
+#installBtn{
+  position:fixed;
+  bottom:20px;
+  right:20px;
+  z-index:9999;
+  background:#ff7a18;
+  color:#fff;
+  border:none;
+  padding:14px 18px;
+  border-radius:50px;
+  font-size:16px;
+  font-weight:bold;
+  cursor:pointer;
+  box-shadow:0 4px 12px rgba(0,0,0,.6);
+  display:none;
+}
+#installBtn:hover{ background:#ffb400; }
+
+#iosHint{
+  position:fixed;
+  bottom:20px;
+  left:20px;
+  right:20px;
+  background:#ff7a18;
+  padding:14px;
+  border-radius:12px;
+  font-size:14px;
+  display:none;
+  text-align:center;
+  z-index:9999;
+}
 </style>
 </head>
 
@@ -161,7 +168,7 @@ body{
 <div class="header">
   <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
   <h1>Busanso Nation</h1>
-  <small>welcome to Busanso Movies & Series. if you hates ads, pay to Watch</small>
+  <small>welcome to Busanso Movies & Series. if you hate ads, pay to Watch</small>
 </div>
 
 <div class="top-actions">
@@ -174,12 +181,11 @@ body{
   <a href="kibanda-login.html" class="btn kibanda">Kibanda</a>
 </div>
 
-
-
 <div class="section">
   <h3>Latest Movies</h3>
   <div class="slider" id="moviesBox"></div>
 </div>
+
 <div class="ad-banner" style="text-align:center; margin:20px 0;">
   <script>
     atOptions = {
@@ -198,6 +204,10 @@ body{
   <div class="slider" id="seriesBox"></div>
 </div>
 
+<!-- FLOATING APP INSTALL BUTTON -->
+<button id="installBtn">Install App</button>
+<div id="iosHint">Tap <strong>Share → Add to Home Screen</strong> to install this app</div>
+
 <script>
 /* ===== REDIRECT IF VALID PIN EXISTS ===== */
 (function(){
@@ -211,7 +221,6 @@ body{
 /* ===== CARD CREATOR ===== */
 function createCard(item, type){
   var isPremium = item.type === "premium";
-
   var card = document.createElement("div");
   card.className = "card";
 
@@ -239,7 +248,6 @@ function createCard(item, type){
       }
     };
   }
-
   return card;
 }
 
@@ -254,9 +262,46 @@ var seriesBox = document.getElementById("seriesBox");
 for(var j=0;j<SERIES.length;j++){
   seriesBox.appendChild(createCard(SERIES[j],"series"));
 }
+
+/* ===== APP INSTALL LOGIC ===== */
+let deferredPrompt;
+const installBtn = document.getElementById('installBtn');
+const iosHint = document.getElementById('iosHint');
+
+function isInStandaloneMode() {
+  return (window.matchMedia('(display-mode: standalone)').matches) || window.navigator.standalone;
+}
+function isiOS() { return /iphone|ipad|ipod/i.test(navigator.userAgent); }
+function isAndroid() { return /android/i.test(navigator.userAgent); }
+
+if(!isInStandaloneMode()){
+  window.addEventListener('beforeinstallprompt', (e) => {
+    e.preventDefault();
+    deferredPrompt = e;
+
+    if(isAndroid()){
+      installBtn.style.display = 'block';
+      installBtn.addEventListener('click', async () => {
+        installBtn.style.display = 'none';
+        deferredPrompt.prompt();
+        await deferredPrompt.userChoice;
+        deferredPrompt = null;
+      });
+    }
+  });
+
+  if(isiOS()){
+    iosHint.style.display = 'block';
+  }
+}
+
+window.addEventListener('appinstalled', () => {
+  installBtn.style.display = 'none';
+  iosHint.style.display = 'none';
+});
 </script>
+
 <!-- Adsterra Ad -->
 <script src="https://pl28597623.effectivegatecpm.com/47/af/6b/47af6bb4248b5c79dabea6b329d6d72f.js"></script>
 </body>
-
 </html>
