--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="monetag" content="6d418a15bef62e99f15abae082c777e0">
 
+<!-- PWA REQUIRED -->
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#000000">
+<link rel="apple-touch-icon" href="icons/icon-192.png">
+<!-- END PWA -->
+
 <style>
 *{
   margin:0;
@@ -59,15 +65,25 @@ body{
   color:#dcdcdc;
 }
 
-/* LOADER */
-.loader{
-  margin:35px auto 0;
-  width:42px;
-  height:42px;
-  border:4px solid rgba(255,255,255,.2);
-  border-top:4px solid #f1c40f;
-  border-radius:50%;
-  animation:spin 1s linear infinite;
+/* CINEMATIC BOUNCING DOT LOADER */
+.loader {
+  display: flex;
+  justify-content: center;
+  margin: 35px auto 0;
+}
+.loader span {
+  width: 12px;
+  height: 12px;
+  margin: 0 6px;
+  background: #f1c40f;
+  border-radius: 50%;
+  animation: bounce 0.6s infinite alternate;
+}
+.loader span:nth-child(2) { animation-delay: 0.2s; }
+.loader span:nth-child(3) { animation-delay: 0.4s; }
+
+@keyframes bounce {
+  to { transform: translateY(-18px); opacity: 0.6; }
 }
 
 /* ANIMATIONS */
@@ -76,7 +92,6 @@ body{
   to{opacity:1;transform:scale(1)}
 }
 @keyframes fadeIn{to{opacity:1}}
-@keyframes spin{to{transform:rotate(360deg)}}
 @keyframes fadeOut{to{opacity:0}}
 @keyframes glow{
   0%,100%{text-shadow:0 0 10px rgba(241,196,15,.4)}
@@ -100,7 +115,11 @@ body{
     Welcome to the source of unique and quality Movies and Series
   </div>
 
-  <div class="loader"></div>
+  <div class="loader">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 </div>
 
 <script>
@@ -114,7 +133,9 @@ setTimeout(() => {
     location.replace("home.html");
   }
 }, 5500);
+</script>
 
+<script>
 /* Register service worker */
 if ("serviceWorker" in navigator) {
   navigator.serviceWorker.register("service-worker.js");
