--- a/serie.html
+++ b/serie.html
@@ -30,13 +30,14 @@ body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padd
 .logo img { max-height:50px; }
 .player { width:100%; max-width:800px; margin:0 auto; }
 .player iframe { width:100%; height:56vw; max-height:500px; border:none; }
-.player-nav { max-width:800px; margin:10px auto; display:flex; gap:10px; }
+.player-nav { max-width:800px; margin:10px auto; display:flex; gap:10px; flex-wrap:wrap; }
 .player-nav button { flex:1; padding:14px; font-size:16px; border:none; border-radius:10px; font-weight:bold; background:#222; color:#fff; cursor:pointer; }
 .player-nav button:disabled { opacity:0.5; cursor:not-allowed; }
 .details { max-width:800px; margin:16px auto; padding:16px; background:#111; border-radius:12px; }
 .meta { color:#aaa; font-size:14px; margin-bottom:8px; }
 .watch { background:#e50914; color:#fff; font-size:18px; width:100%; padding:16px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
 .secondary { background:#222; color:#fff; margin-top:8px; width:100%; padding:16px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
+.shareWhatsapp { background:#25D366; color:#fff; margin-top:8px; width:100%; padding:16px; border:none; border-radius:10px; font-weight:bold; cursor:pointer; }
 .episodes { display:grid; gap:8px; margin-top:10px; }
 .episode { background:#181818; padding:12px; border-radius:8px; cursor:pointer; }
 .episode.active { background:#e50914; font-weight:bold; }
@@ -69,6 +70,7 @@ body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padd
   <div class="meta" id="meta"></div>
   <button class="watch" id="watchBtn">▶ Watch Now</button>
   <button class="secondary" onclick="toggleEpisodes()">📺 Episodes</button>
+  <button class="shareWhatsapp" id="shareBtn">📤 Share on WhatsApp</button>
   <p id="synopsis"></p>
   <div class="cast" id="cast"></div>
   <div class="episodes" id="episodeList" style="display:none"></div>
@@ -87,13 +89,15 @@ body { margin:0; background:#000; color:#fff; font-family:Arial,sans-serif; padd
 // ================= ADSTERRA CONFIG =================
 const ADSTERRA_LINK = "https://www.effectivegatecpm.com/bur4x69piu?key=111989f663f7a1507cb9aee022725797";
 
+// Updated check: if activePIN exists, disable ads
 function isFreeUser() {
-  return localStorage.getItem("activePIN") !== "Orion196";
+  const pin = localStorage.getItem("activePIN");
+  return !pin; // free user if no pin stored
 }
 
 let lastAdTime = 0;
 function openAd() {
-  if (!isFreeUser()) return;
+  if (!isFreeUser()) return; // subscribers never see ads
   const now = Date.now();
   if (now - lastAdTime < 60000) return; // 1 min cooldown
   lastAdTime = now;
@@ -117,7 +121,7 @@ const watchBtn = document.getElementById("watchBtn");
 const prevBtn = document.getElementById("prevBtn");
 const nextBtn = document.getElementById("nextBtn");
 const episodeList = document.getElementById("episodeList");
-const commentBtn = document.getElementById("commentBtn");
+const shareBtn = document.getElementById("shareBtn");
 
 // ================= SERIES DATA =================
 const params = new URLSearchParams(location.search);
@@ -183,7 +187,7 @@ function playEpisode(i){
 }
 
 watchBtn.onclick = () => {
-  openAd();
+  openAd(); // only fires if free user
   playEpisode(0);
 };
 
@@ -193,6 +197,15 @@ nextBtn.onclick = () => idx<serie.episodes.length-1 && playEpisode(idx+1);
 function toggleEpisodes(){
   episodeList.style.display = episodeList.style.display==="none" ? "grid" : "none";
 }
+
+// ================= SHARE ON WHATSAPP =================
+shareBtn.onclick = () => {
+  const text = encodeURIComponent(
+    `Check this series: ${serie.title}\n\n${serie.synopsis}\n\nWatch here: https://bit.ly/busanso`
+  );
+  const url = `https://api.whatsapp.com/send?text=${text}`;
+  window.open(url, "_blank");
+};
 
 // ================= COMMENTS LOGIC (UNCHANGED) =================
 const commentsRef = firebase.database().ref("comments/series/"+serie.id);
