--- a/home.html
+++ b/home.html
@@ -24,7 +24,15 @@ body{
   padding:20px;
   text-align:center;
 }
-.header img{ height:55px; }
+.header h1{
+  margin:4px 0;
+  font-size:24px;
+  font-weight:700;
+}
+.header img{
+  height:55px;
+  margin-top:4px;
+}
 
 /* BUTTONS */
 .top-actions{
@@ -180,6 +188,7 @@ body{
 <body>
 
 <div class="header">
+  <h1>Busanso Nation</h1>
   <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
 </div>
 
