--- a/home.html
+++ b/home.html
@@ -21,141 +21,135 @@ body{
 
 /* HEADER */
 .header{
-  padding:20px;
+  padding:18px 10px;
   text-align:center;
 }
 .header h1{
-  margin:4px 0;
-  font-size:24px;
+  margin:0;
+  font-size:22px;
   font-weight:700;
 }
 .header img{
-  height:55px;
-  margin-top:4px;
+  height:50px;
+  margin-top:6px;
 }
 
-/* BUTTONS */
+/* TOP BUTTONS */
 .top-actions{
   display:flex;
   justify-content:center;
   flex-wrap:wrap;
-  gap:12px;
-  margin-bottom:22px;
-  padding:0 10px;
+  gap:10px;
+  padding:0 10px 15px;
 }
 
 .btn{
-  padding:12px 22px;
+  padding:10px 18px;
   border-radius:999px;
   font-weight:700;
-  text-decoration:none;
-  font-size:13px;
+  font-size:12px;
   color:#fff;
-  letter-spacing:.3px;
-  transition:all .25s ease;
-  box-shadow:0 6px 16px rgba(0,0,0,.35);
+  text-decoration:none;
+  box-shadow:0 5px 14px rgba(0,0,0,.4);
   border:1px solid rgba(255,255,255,.08);
 }
 
-/* INDIVIDUAL BUTTON COLORS */
-.subscribe{ background:linear-gradient(135deg,#e50914,#ff4d4d); }
-.login{ background:linear-gradient(135deg,#2563eb,#38bdf8); }
-.live{ background:linear-gradient(135deg,#16a34a,#4ade80); }
-.about{ background:#111; border:1px solid #333; color:#ddd; }
-.agents{ background:linear-gradient(135deg,#9333ea,#c084fc); }
-.library{ background:linear-gradient(135deg,#f59e0b,#facc15); color:#000; }
-.kibanda{ background:linear-gradient(135deg,#14b8a6,#2dd4bf); color:#002; }
-
-/* HOVER EFFECT */
-.btn:hover{
-  transform:translateY(-2px) scale(1.03);
-  box-shadow:0 10px 24px rgba(0,0,0,.5);
-  opacity:.95;
-}
+.subscribe{ background:#e50914; }
+.login{ background:#2563eb; }
+.live{ background:#16a34a; }
+.about{ background:#111; color:#ddd; }
+.agents{ background:#9333ea; }
+.library{ background:#facc15; color:#000; }
+.kibanda{ background:#14b8a6; color:#002; }
 
 /* SECTIONS */
-.section{ padding:15px; }
+.section{ padding:12px; }
 .slider{
   display:flex;
-  gap:12px;
+  gap:10px;
   overflow-x:auto;
-  scroll-behavior:smooth;
 }
 .slider::-webkit-scrollbar{ display:none; }
 
-/* CARD - responsive */
+/* CARDS – MOBILE FIRST (3 visible) */
 .card{
-  min-width:140px;
-  max-width:160px;
-  text-align:center;
-  position:relative;
+  width:32vw;
+  max-width:130px;
   flex-shrink:0;
+  text-align:center;
 }
 .card img{
   width:100%;
-  border-radius:8px;
+  border-radius:7px;
 }
 .card-title{
+  font-size:12px;
   margin-top:4px;
-  font-size:13px;
   font-weight:600;
 }
 
 /* WATCH BUTTON */
 .watch-btn{
-  margin-top:4px;
   width:100%;
+  margin-top:4px;
   padding:6px;
+  font-size:11px;
   border:none;
   border-radius:6px;
-  font-weight:bold;
-  cursor:pointer;
   background:#e50914;
   color:#fff;
-  font-size:12px;
+  font-weight:700;
 }
 
-/* BADGES */
+/* BADGE */
 .badge{
   position:absolute;
-  top:6px;
-  left:6px;
-  font-size:10px;
-  padding:2px 6px;
+  top:5px;
+  left:5px;
+  font-size:9px;
+  padding:2px 5px;
   border-radius:6px;
   background:#22c55e;
 }
 .badge.premium{ background:#e50914; }
 
-/* LOCK ICON */
 .lock-icon{
   position:absolute;
   inset:0;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:12px;
-  font-weight:bold;
-  background:rgba(0,0,0,0.6);
+  background:rgba(0,0,0,.6);
+  font-size:11px;
+  font-weight:700;
 }
 
-/* FLOATING INSTALL / OPEN APP BUTTONS */
-#installBtn, #openAppBtn{
+/* TABLET / PC */
+@media(min-width:768px){
+  .card{ width:160px; max-width:160px; }
+}
+
+/* SMART TV / LARGE */
+@media(min-width:1200px){
+  .card{ width:190px; max-width:190px; }
+}
+
+/* INSTALL BUTTON */
+#installBtn{
   position:fixed;
-  z-index:9999;
-  border:none;
+  bottom:20px;
+  right:20px;
   padding:14px 18px;
   border-radius:50px;
   font-size:16px;
-  font-weight:bold;
-  cursor:pointer;
+  font-weight:700;
+  border:none;
+  background:#ff7a18;
+  color:#fff;
   box-shadow:0 4px 12px rgba(0,0,0,.6);
   display:none;
+  z-index:9999;
 }
-#installBtn{ bottom:20px; right:20px; background:#ff7a18; color:#fff; }
-#installBtn:hover{ background:#ffb400; }
-#openAppBtn{ bottom:80px; right:20px; background:#16a34a; color:#fff; }
-#openAppBtn:hover{ background:#22c55e; }
 
 #iosHint{
   position:fixed;
@@ -163,24 +157,12 @@ body{
   left:20px;
   right:20px;
   background:#ff7a18;
-  padding:14px;
+  padding:12px;
   border-radius:12px;
   font-size:14px;
-  display:none;
   text-align:center;
+  display:none;
   z-index:9999;
-}
-
-/* RESPONSIVE CARD SIZE */
-@media(min-width:768px){
-  .card{ min-width:160px; max-width:180px; }
-  .card-title{ font-size:14px; }
-  .watch-btn{ font-size:13px; padding:7px; }
-}
-@media(min-width:1200px){
-  .card{ min-width:180px; max-width:200px; }
-  .card-title{ font-size:15px; }
-  .watch-btn{ font-size:14px; padding:8px; }
 }
 </style>
 </head>
@@ -189,7 +171,7 @@ body{
 
 <div class="header">
   <h1>Busanso Nation</h1>
-  <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png" alt="Logo">
+  <img src="https://i.ibb.co/hxgrLF35/BUSANSO-New.png">
 </div>
 
 <div class="top-actions">
@@ -207,8 +189,13 @@ body{
   <div class="slider" id="moviesBox"></div>
 </div>
 
-<!-- Adsterra banner between Movies and Series -->
-<div class="ad-banner" style="text-align:center; margin:20px 0;">
+<div class="section">
+  <h3>Latest Series</h3>
+  <div class="slider" id="seriesBox"></div>
+</div>
+
+<!-- BOTTOM BANNER AD -->
+<div class="ad-banner" style="text-align:center; margin:25px 0;">
   <script>
     atOptions = {
       'key' : '1c9ccdb756a82c4d663014a338917bd7',
@@ -222,17 +209,20 @@ body{
 </div>
 
 <div class="section">
-  <h3>Latest Series</h3>
-  <div class="slider" id="seriesBox"></div>
+  <h3>Free Movies</h3>
+  <div class="slider" id="freeMoviesBox"></div>
 </div>
 
-<!-- FLOATING APP INSTALL / OPEN APP BUTTON -->
+<div class="section">
+  <h3>Free Series</h3>
+  <div class="slider" id="freeSeriesBox"></div>
+</div>
+
 <button id="installBtn">Install App</button>
-<button id="openAppBtn">OPEN APP</button>
-<div id="iosHint">Tap <strong>Share → Add to Home Screen</strong> to install this app</div>
+<div id="iosHint">Tap <strong>Share → Add to Home Screen</strong></div>
 
 <script>
-/* ===== REDIRECT IF VALID PIN EXISTS ===== */
+/* ===== PIN REDIRECT (UNCHANGED) ===== */
 (function(){
   var pin = localStorage.getItem("activePIN");
   var exp = Number(localStorage.getItem("pinExpiry"));
@@ -241,107 +231,67 @@ body{
   }
 })();
 
-/* ===== CARD CREATOR ===== */
-function createCard(item, type){
-  var isPremium = item.type === "premium";
-  var card = document.createElement("div");
-  card.className = "card";
+/* ===== CARD CREATOR (UNCHANGED LOGIC) ===== */
+function createCard(item,type){
+  var isPremium=item.type==="premium";
+  var card=document.createElement("div");
+  card.className="card";
+  card.innerHTML=
+  '<div style="position:relative">'+
+  '<img src="'+item.poster+'">'+
+  '<span class="badge '+(isPremium?'premium':'')+'">'+
+  (isPremium?'PREMIUM':'FREE')+
+  '</span>'+
+  (isPremium?'<div class="lock-icon">LOCKED</div>':'')+
+  '</div>'+
+  '<div class="card-title">'+item.title+'</div>'+
+  '<button class="watch-btn">'+(isPremium?'Pay to Watch':'Watch')+'</button>';
 
-  var html = '';
-  html += '<div style="position:relative">';
-  html += '<img src="' + item.poster + '">';
-  html += '<span class="badge ' + (isPremium ? 'premium' : '') + '">';
-  html += isPremium ? 'PREMIUM' : 'FREE';
-  html += '</span>';
-  if(isPremium){
-    html += '<div class="lock-icon">LOCKED</div>';
-  }
-  html += '</div>';
-  html += '<div class="card-title">' + item.title + '</div>';
-  html += '<button class="watch-btn">' + (isPremium ? 'Pay to Watch' : 'Watch') + '</button>';
-
-  card.innerHTML = html;
-
-  if(isPremium){
-    card.querySelector(".watch-btn").onclick = function(){
-      location.href = "packages.html";
-    };
-  } else {
-    card.querySelector(".watch-btn").onclick = function(){
-      if(type === "movie"){
-        location.href = "movie.html?id=" + item.id;
-      } else {
-        location.href = "serie.html?id=" + item.id;
-      }
-    };
-  }
-
+  card.querySelector(".watch-btn").onclick=function(){
+    if(isPremium) location.href="packages.html";
+    else location.href=(type==="movie"?"movie.html?id=":"serie.html?id=")+item.id;
+  };
   return card;
 }
 
-/* ===== RENDER MOVIES ===== */
-var moviesBox = document.getElementById("moviesBox");
-for(var i=0;i<MOVIES.length;i++){
-  moviesBox.appendChild(createCard(MOVIES[i],"movie"));
-}
-
-/* ===== RENDER SERIES ===== */
-var seriesBox = document.getElementById("seriesBox");
-for(var j=0;j<SERIES.length;j++){
-  seriesBox.appendChild(createCard(SERIES[j],"series"));
-}
-
-/* ===== APP INSTALL / OPEN APP LOGIC ===== */
-let deferredPrompt;
-const installBtn = document.getElementById('installBtn');
-const openAppBtn = document.getElementById('openAppBtn');
-const iosHint = document.getElementById('iosHint');
-
-function isInStandaloneMode() {
-  return (window.matchMedia('(display-mode: standalone)').matches) || window.navigator.standalone;
-}
-function isiOS() { return /iphone|ipad|ipod/i.test(navigator.userAgent); }
-function isAndroid() { return /android/i.test(navigator.userAgent); }
-
-// Detect if running inside the installed webview app
-function isInWebviewApp() {
-  return navigator.userAgent.includes("BusansoWebviewApp"); // replace with your webview UA
-}
-
-if(!isInStandaloneMode() && !isInWebviewApp()){
-  window.addEventListener('beforeinstallprompt', (e) => {
-    e.preventDefault();
-    deferredPrompt = e;
-
-    if(isAndroid()){
-      installBtn.style.display = 'block';
-      installBtn.addEventListener('click', async () => {
-        installBtn.style.display = 'none';
-        deferredPrompt.prompt();
-        await deferredPrompt.userChoice;
-        deferredPrompt = null;
-      });
-    }
-  });
-
-  if(isiOS()){
-    iosHint.style.display = 'block';
-  }
-
-  openAppBtn.style.display = 'block';
-  openAppBtn.addEventListener('click', ()=>{
-    location.href = "busansoapp://open"; // your app custom scheme
-  });
-}
-
-window.addEventListener('appinstalled', () => {
-  installBtn.style.display = 'none';
-  iosHint.style.display = 'none';
-  openAppBtn.style.display = 'none';
+/* ===== RENDER ALL ===== */
+MOVIES.forEach(m=>{
+  moviesBox.appendChild(createCard(m,"movie"));
+  if(m.type!=="premium") freeMoviesBox.appendChild(createCard(m,"movie"));
 });
+SERIES.forEach(s=>{
+  seriesBox.appendChild(createCard(s,"series"));
+  if(s.type!=="premium") freeSeriesBox.appendChild(createCard(s,"series"));
+});
+
+/* ===== INSTALL LOGIC (UNCHANGED) ===== */
+let deferredPrompt;
+const installBtn=document.getElementById("installBtn");
+const iosHint=document.getElementById("iosHint");
+
+function isStandalone(){
+  return window.matchMedia('(display-mode: standalone)').matches || navigator.standalone;
+}
+function isiOS(){return /iphone|ipad|ipod/i.test(navigator.userAgent);}
+function isAndroid(){return /android/i.test(navigator.userAgent);}
+
+if(!isStandalone()){
+  window.addEventListener("beforeinstallprompt",e=>{
+    e.preventDefault();
+    deferredPrompt=e;
+    if(isAndroid()) installBtn.style.display="block";
+  });
+  if(isiOS()) iosHint.style.display="block";
+}
+
+installBtn.onclick=async()=>{
+  installBtn.style.display="none";
+  deferredPrompt.prompt();
+  await deferredPrompt.userChoice;
+};
 </script>
 
-<!-- Adsterra Ad -->
 <script src="https://pl28597623.effectivegatecpm.com/47/af/6b/47af6bb4248b5c79dabea6b329d6d72f.js"></script>
+
 </body>
 </html>
